--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "npm-run-all -p watch:js watch:css",
     "build:js": "esbuild ./assets/js/app.js --minify --sourcemap --outfile=./assets/js/app.min.js",
     "watch:js": "esbuild ./assets/js/app.js --minify --sourcemap --outfile=./assets/js/app.min.js --watch",
-    "build:css": "npx postcss style.dev.css --use autoprefixer --output ./style.css",
-    "watch:css": "npx postcss style.dev.css --use autoprefixer --output ./style.css --watch"
+    "build:css": "npx postcss style.dev.scss --output ./style.css",
+    "watch:css": "npx postcss style.dev.scss --output ./style.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,12 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
-    "postcss-nested": "^7.0.2"
+    "postcss-nested": "^7.0.2",
+    "postcss-scss": "^4.0.9"
+  },
+  "devDependencies": {
+    "stylelint": "^16.23.1",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-config-standard-scss": "^15.0.1"
   }
 }
